--- a/.gitignore
+++ b/.gitignore
@@ -7,10 +7,10 @@ build/
 
 ### IntelliJ IDEA ###
 .idea
-.idea/modules.xml
-.idea/jarRepositories.xml
-.idea/compiler.xml
-.idea/libraries/
+#.idea/modules.xml
+#.idea/jarRepositories.xml
+#.idea/compiler.xml
+#.idea/libraries/
 *.iws
 *.iml
 *.ipr
