--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,3 @@
-.env
 .gradle
 build/
 !gradle/wrapper/gradle-wrapper.jar
@@ -6,11 +5,7 @@ build/
 !**/src/test/**/build/
 
 ### IntelliJ IDEA ###
-.idea
-#.idea/modules.xml
-#.idea/jarRepositories.xml
-#.idea/compiler.xml
-#.idea/libraries/
+.idea/
 *.iws
 *.iml
 *.ipr
@@ -43,4 +38,6 @@ bin/
 ### Mac OS ###
 .DS_Store
 
+### Custom ###
 commands.txt
+.env
