--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -23,6 +23,7 @@ jobs:
     steps:
     - name: Checkout sources
       uses: actions/checkout@v4
+      
     - name: Set up JDK 21
       uses: actions/setup-java@v4
       with:
@@ -33,6 +34,10 @@ jobs:
     # See: https://github.com/gradle/actions/blob/main/setup-gradle/README.md
     - name: Setup Gradle
       uses: gradle/actions/setup-gradle@v4
+      
+    - name: Make Gradlew Executable
+      run: chmod +x ./gradlew
+      
     - name: Build with Gradle
       run: ./gradlew build
 
@@ -45,10 +50,12 @@ jobs:
     steps:
     - name: Checkout sources
       uses: actions/checkout@v4
+      
     - name: Setup Java
       uses: actions/setup-java@v4
       with:
         distribution: 'corretto'
         java-version: 21
+        
     - name: Generate and submit dependency graph
       uses: gradle/actions/dependency-submission@v4
