--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -24,10 +24,10 @@ jobs:
     - name: Checkout sources
       uses: actions/checkout@v4
       
-    - name: Set up JDK 21
+    - name: Setup Java
       uses: actions/setup-java@v4
       with:
-        java-version: '21'
+        java-version: '23'
         distribution: 'corretto'
 
     # Configure Gradle for optimal use in GitHub Actions, including caching of downloaded dependencies.
@@ -55,7 +55,7 @@ jobs:
       uses: actions/setup-java@v4
       with:
         distribution: 'corretto'
-        java-version: 21
+        java-version: 23
         
     - name: Generate and submit dependency graph
       uses: gradle/actions/dependency-submission@v4
